# lib/api-spec/openapi.yaml
@@ -167,6 +167,8 @@ components:
           type: string
         customerPhone:
           type: string
+        customerEmail:
+          type: ["string", "null"]
         scheduledTime:
           type: ["string", "null"]
         estimatedDistance:
@@ -215,6 +217,8 @@ components:
           type: string
         customerPhone:
           type: string
+        customerEmail:
+          type: ["string", "null"]
         scheduledTime:
           type: ["string", "null"]
         estimatedDistance:
